--- a/main.css
+++ b/main.css
@@ -42,29 +42,37 @@ p {
 }
 
 .image-electronics, .image-stage-effects {
-	
+	border: solid red;
+	padding: 1em;
 }
 
 .record-label {
-
+	
 }
 
 .track-list {
-
+	
 }
 
 #about-photo {
-
+	border: solid red;
+	padding: 1em;
 }
 
 #copyright {
-
+	color: red;
+	font-size: 75%;
 }
 
 #section-about, #section-discography, #section-equipment {
-
+	border: solid red;
+	margin: 1em;
+	padding: 1em;
 }
 
 #text-intro {
-	
+	background: gray;
+	border: solid red;
+	color: red;
+	padding: 1em;
 }
